Rename flagUri to flagCode and remove team flags S3 bucket
