# lambdas/src/main/kotlin/scorcerer/server/db/tables/TeamTable.kt
@@ -5,5 +5,5 @@ import org.jetbrains.exposed.v1.core.Table
 object TeamTable : Table("team") {
     val id = integer("id").uniqueIndex().autoIncrement()
     val name = varchar("name", 30).uniqueIndex()
-    val flagUri = varchar("flag_uri", 100)
+    val flagCode = varchar("flag_code", 100)
 }
